# resume-jd-matcher

./: .gitignore  .replit  README.md  pyproject.toml  requirements.txt  start.sh
backend/: app.py
backend/utils/: __init__.py  constants.py  file_parser.py  reasoning.py  scoring.py  section_parser.py  skill_matcher.py  text_processing.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
